# JointParametersFrom6DOFTrajectory

./: CMakeLists.txt  DoubleRevolutePair.cpp  DoubleRevolutePair.h  FixedPair.cpp  FixedPair.h  KinematicPair.cpp  KinematicPair.h  PrismaticPair.cpp  PrismaticPair.h  README.md  RevolutePair.cpp  RevolutePair.h  SphericalPair.cpp  SphericalPair.h  calib.xml  sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  sample6.cpp
